# hackerskeyboard

diyRAG/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  EXTRACT.md  LICENSE  MASTER_BUILD_SPEC.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.yml  justfile  rust-toolchain.toml
diyRAG/.github/workflows/: ci.yml
diyRAG/ADR/: 0001-rust-first-service-tier.md  0002-python-confined-to-inference-and-hard-parsing.md  0003-windows-service-and-unraid-runtime.md  0004-rust-native-inference-default-vllm-optional.md  0005-version-vector-crdt-no-lww.md  0006-per-tenant-qdrant-collections.md  0007-socket-security-triage.md  0008-ort-load-dynamic-no-openssl.md  0009-candle-replaces-ort.md  README.md
diyRAG/crates/api-gateway/: Cargo.toml
diyRAG/crates/api-gateway/src/: auth.rs  error.rs  main.rs  ratelimit.rs  routes.rs
diyRAG/crates/autoscaler/: Cargo.toml  README.md
diyRAG/crates/autoscaler/src/: main.rs  policy.rs
diyRAG/crates/common/: Cargo.toml  README.md
diyRAG/crates/common/src/: auth.rs  blob.rs  config.rs  correlation.rs  db.rs  errors.rs  health.rs  ids.rs  lib.rs  logging.rs  schemas.rs  vector.rs
diyRAG/crates/core-api/: Cargo.toml  README.md
diyRAG/crates/core-api/src/: batch.rs  files.rs  main.rs  rag.rs  roots.rs
diyRAG/crates/diyrag-cli/: Cargo.toml  README.md
diyRAG/crates/diyrag-cli/src/: api.rs  cli.rs  main.rs  service_manager.rs
diyRAG/crates/diyragd/: Cargo.toml  README.md
diyRAG/crates/diyragd/src/: main.rs  supervisor.rs  unix.rs  windows_service.rs
diyRAG/crates/ingestion-worker/: Cargo.toml  build.rs
diyRAG/crates/ingestion-worker/proto/: parsing.proto
diyRAG/crates/ingestion-worker/src/: chunker.rs  embed.rs  main.rs  persist.rs
diyRAG/crates/ingestion-worker/src/parser/: ebook.rs  epub.rs  markup.rs  mod.rs  ooxml.rs  pdf.rs  spreadsheet.rs  structured.rs
diyRAG/crates/mcp-server/: Cargo.toml  README.md
diyRAG/crates/mcp-server/src/: auth.rs  main.rs  resources.rs  tools.rs
diyRAG/crates/retrieval/: Cargo.toml  README.md
diyRAG/crates/retrieval/src/: condense.rs  hybrid.rs  main.rs  rerank.rs
diyRAG/crates/sync-agent/: Cargo.toml  README.md  build.rs
diyRAG/crates/sync-agent/proto/: sync.proto
diyRAG/crates/sync-agent/src/: crdt.rs  discovery.rs  grpc.rs  main.rs  replication.rs
diyRAG/deploy/systemd/: README.md  diyragd.service
diyRAG/deploy/unraid/: README.md  diyrag.xml  docker-compose.notes.md  userscript-start.sh
diyRAG/deploy/windows/: GPU.md  README.md  install.ps1  uninstall.ps1  winsw-fallback.md
diyRAG/eval/: README.md
diyRAG/infra/: rust-service.Dockerfile
diyRAG/infra/ca/: .gitignore  gen-ca.sh  gen-cert.sh
diyRAG/infra/caddy/: Caddyfile
diyRAG/infra/grafana/dashboards/: README.md
diyRAG/infra/otel/: otel-collector.yaml
diyRAG/migrations/: 0001_init.sql  0002_error_log_partitions.sql  README.md
diyRAG/native/: README.md
diyRAG/scripts/: gen-env.sh  vendor.sh
diyRAG/services-py/gpu-runtime/: Dockerfile  README.md  pyproject.toml  requirements-ocr.txt  requirements-vllm.txt  requirements.txt
diyRAG/services-py/gpu-runtime/app/: __init__.py  logging_config.py  main.py
diyRAG/services-py/gpu-runtime/tests/: test_health.py
diyRAG/services-py/parsing-service/: Dockerfile  README.md  pyproject.toml  requirements.txt
diyRAG/services-py/parsing-service/app/: __init__.py  main.py  schemas.py
diyRAG/services-py/parsing-service/proto/: parsing.proto
diyRAG/services-py/parsing-service/tests/: test_health.py
diyRAG/tests/: README.md
diyRAG/tools/launch-gate/: Cargo.toml  README.md
diyRAG/tools/launch-gate/src/: main.rs
diyRAG/web/: README.md
