# diyRAG — Cargo workspace manifest (Rust-first RAG monorepo)
# See MASTER_BUILD_SPEC.md §3 (stack) and §4 (repo layout). This file is the
# single source of truth for dependency versions; member crates inherit them
# via `dep.workspace = true`. Pin versions here, never in member crates.

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
license = "MIT"
authors = ["diyRAG contributors"]
repository = "https://github.com/<owner>/diyRAG" # private repo
description = "Rust-first self-hosted multi-instance RAG platform"

[workspace.dependencies]
# --- Async runtime & web framework (§3.2: Tokio + Axum + Tower) ---
tokio = { version = "1.43", features = ["full"] }
axum = { version = "0.8", features = ["macros", "ws", "json"] }
tower = { version = "0.5", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.6", features = [
    "trace",
    "cors",
    "limit",
    "request-id",
    "compression-gzip",
    "timeout",
] }

# --- Serialization & validation (§3.2: serde + garde) ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
garde = { version = "0.20", features = ["derive", "serde"] }

# --- Relational store (§3.2 / §5.1: PostgreSQL 16 via sqlx) ---
# runtime-tokio-rustls keeps us OpenSSL-free (§12.1). uuid/chrono/json features
# map UUIDv7 PKs, UTC timestamps, and JSONB columns to Rust types.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
    "migrate",
] }

# --- Vector store, broker, blob store (§3.2 / §5.2 / §5.3) ---
qdrant-client = "1.12"
async-nats = "0.38"
object_store = { version = "0.11", features = ["aws"] }

# --- gRPC / protobuf for sync + inference (§3.2: tonic + prost) ---
tonic = { version = "0.12", features = ["tls", "transport"] }
prost = "0.13"

# --- TLS / PKI (§12.1: rustls everywhere + rcgen for CA issuance) ---
rustls = "0.23"
rcgen = "0.13"

# --- Observability (§13: tracing + OpenTelemetry) ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }

# --- IDs, hashing, content typing (§5.1 / §12.4: uuid v7, sha256, magic-byte) ---
uuid = { version = "1.11", features = ["v7", "serde"] }
sha2 = "0.10"
infer = "0.16"

# --- File watching & glob matching (§6.1: notify + globset) ---
notify = "7.0"
globset = "0.4"

# --- Tokenization & Rust-native inference (§3.2 / §16: tokenizers + ort) ---
tokenizers = "0.21"
ort = { version = "2.0.0-rc.9", features = ["cuda", "directml"] }

# --- CLI (§16b: diyrag CLI via clap) ---
clap = { version = "4.5", features = ["derive", "env"] }

# --- Error handling (§19: thiserror for libs, anyhow for bins) ---
anyhow = "1.0"
thiserror = "2.0"

# --- Auth & rate limiting (§12.2 / §12.3) ---
jsonwebtoken = "9.3"
argon2 = "0.5"
governor = "0.7"

# --- HTTP client (gpu-runtime / parsing-service calls, blob fetch) ---
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }

# --- LAN discovery & async traits (§9 / §6.3) ---
mdns-sd = "0.12"
async-trait = "0.1"

# --- Misc shared helpers ---
chrono = { version = "0.4", features = ["serde"] }

# --- Windows Service integration (§16b.2) — target-gated in member crates ---
# Member crates reference these only under `[target.'cfg(windows)'.dependencies]`.
windows-service = "0.7"
eventlog = "0.3"

[profile.release]
# Static service binaries for distroless/scratch images (§3.1, §12.8).
# Fat LTO + a single codegen unit trade compile time for the smallest, fastest
# binaries; strip symbols to shrink images further. panic=abort removes
# unwinding tables (services log-and-exit; supervisors restart — §14).
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
incremental = false

[profile.dev]
# Faster local iteration without sacrificing usable backtraces.
opt-level = 0
debug = true
