[package]
name = "diyrag-common"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
license = "Apache-2.0"
description = "diyRAG shared library: config, logging, correlation-id, errors, auth, db, schemas, vector/blob/id helpers."
publish = false

[lints.rust]
unsafe_code = "forbid"

[dependencies]
# Async runtime + traits
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Web / extractors (CorrelationId extractor, error responses)
axum = { workspace = true }
http = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization + validation
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Typed config
figment = { workspace = true, features = ["env", "toml"] }

# Logging / tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json", "fmt"] }

# Errors
thiserror = { workspace = true }

# Auth
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }

# Database
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
    "migrate",
] }

# Vector store
qdrant-client = { workspace = true }

# Blob store
object_store = { workspace = true }
bytes = { workspace = true }

# IDs / hashing / time
uuid = { workspace = true, features = ["v7", "serde"] }
sha2 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
# `test` feature unlocks figment::Jail for hermetic, parallel-safe env-config tests.
figment = { workspace = true, features = ["test"] }
