[package]
name = "diyrag-ingestion-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "diyRAG ingestion worker: NATS JetStream consumer that parses, chunks, embeds, and persists documents (MASTER_BUILD_SPEC.md §6)."
publish = false

[[bin]]
name = "diyrag-ingestion-worker"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
# Shared library (config/logging/errors/auth/db/schemas/vector/blob) — §4.
diyrag-common = { path = "../common" }

# --- Async runtime, traits, broker (§3.2 / §6.2) ---
tokio = { workspace = true }
tokio-util = "0.7" # CancellationToken for cooperative shutdown (§16b)
async-trait = { workspace = true }
async-nats = { workspace = true }
futures = "0.3"

# --- Serialization (canonical chunk record, §5.4) ---
serde = { workspace = true }
serde_json = { workspace = true }

# --- Persistence: Postgres + Qdrant + blob (§6.5 / §5) ---
sqlx = { workspace = true }
qdrant-client = { workspace = true }
object_store = { workspace = true }
bytes = "1.9"

# --- IDs / hashing / content typing (§6.2 idempotency, §6.3 MIME sniff) ---
uuid = { workspace = true }
sha2 = { workspace = true }
infer = { workspace = true }
chrono = { workspace = true }

# --- Chunking / tokenization (§6.4) ---
tokenizers = { workspace = true }

# --- Embedding backend: in-proc candle OR gpu-runtime HTTP (§6.5 / §16) ---
# candle (pure-Rust, CPU default; CUDA/Metal opt-in on GPU nodes) replaces ort —
# no ONNX Runtime, no OpenSSL. See ADR-0009.
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
reqwest = { workspace = true }

# --- gRPC client to the Python parsing-service for hard parses (§3.3 / §6.3) ---
tonic = { workspace = true }
prost = { workspace = true }

# --- Native parsers (§6.3). DECISION: pinned in this member crate, not the
#     workspace root, because the root Cargo.toml is owned by another agent and
#     this task must not edit files outside the four target crate dirs. Promote
#     to [workspace.dependencies] in a follow-up once ownership allows. ---
quick-xml = "0.37"           # docx/pptx OOXML (§6.3 OoxmlParser)
zip = { version = "2.2", default-features = false, features = ["deflate"] } # OOXML/epub containers
calamine = "0.26"            # xlsx/xls (§6.3 SpreadsheetParser)
csv = "1.3"                  # csv (§6.3 SpreadsheetParser)
pdf-extract = "0.7"          # PDF text extraction (§6.3 PdfTextParser)
lopdf = "0.34"               # PDF structure / page inspection (scanned heuristic)
scraper = "0.21"             # html DOM (§6.3 MarkupParser)
pulldown-cmark = "0.12"      # markdown (§6.3 MarkupParser)
mail-parser = "0.9"          # eml (§6.3 StructuredParser)
unicode-normalization = "0.1" # hidden-text sanitization (§12.5)

# --- Errors, config, retry/backoff (§14 / §19) ---
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
backoff = { version = "0.4", features = ["tokio"] } # exponential backoff (§14)

[build-dependencies]
# Compiles proto/parsing.proto for the parsing-service gRPC client (§3.3).
tonic-build = "0.12"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
