[package]
name = "diyrag-retrieval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "diyRAG retrieval service: Qdrant dense+sparse hybrid search with RRF/weighted fusion, cross-encoder reranking, and optional context condensation (MASTER_BUILD_SPEC.md §7)."
publish = false

[[bin]]
name = "diyrag-retrieval"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
# Shared library (config/logging/errors/auth/db/schemas/vector/blob) — §4.
diyrag-common = { path = "../common" }

# --- Async runtime, traits, web framework (§3.2) ---
tokio = { workspace = true }
tokio-util = "0.7" # CancellationToken for cooperative shutdown (§16b)
async-trait = { workspace = true }

axum = { workspace = true }
http = "1.1"
tower = { workspace = true }
tower-http = { workspace = true }

# --- Vector store: Qdrant hybrid query (§7.1) ---
qdrant-client = { workspace = true }

# --- Serialization + validation (§11.1) ---
serde = { workspace = true }
serde_json = { workspace = true }
garde = { workspace = true }

# --- IDs / time (§5.2 point ids) ---
uuid = { workspace = true }
chrono = { workspace = true }

# --- Reranker: in-proc ONNX cross-encoder OR gpu-runtime HTTP (§7.1 / §16) ---
ort = { workspace = true }
tokenizers = { workspace = true }
reqwest = { workspace = true }

# --- Errors, config, tracing (§14 / §19) ---
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
